# ai-news-dashboard

./: README.md  app.py  news_data.csv  news_pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: update_data.yml
src/ai_news_dashboard/: __init__.py  config.py  logging_utils.py  nltk_resources.py  pipeline.py  text_analytics.py
tests/: conftest.py  test_pipeline.py
