[project]
name = "ai-news-dashboard"
version = "0.1.0"
description = "AI Safety & Governance News Tracker"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  # Project supports Python 3.9 (GitHub Actions). PEP 604 (`X | None`) requires Python 3.10+.
  "UP045",
]

[tool.ruff.lint.isort]
known-first-party = ["ai_news_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
